--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="list-icons">
             <img src="assents/icon-github.png" alt="">
-            <img src="assents/icon-linkedin.png" alt="">
+            <img class="icon-linkedin" src="assents/icon-linkedin.png" alt="">
         </div>
     </div>
 
