--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Matheus</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
-        </style>
+    
 </head>
 <body>
     <div class="nav">
@@ -22,6 +20,15 @@
             <img src="assents/icon-github.png" alt="">
             <img class="icon-linkedin" src="assents/icon-linkedin.png" alt="">
         </div>
+    </div>
+
+    <div class="body-home">
+        <h1>Matheus Diógenes</h1>
+        <h3>Desenvolvedor Full-Stack</h3>
+    </div>
+
+    <div class="circle">
+
     </div>
 
 
