iniciando sobre + tecnologias

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </ul>
 
         <div class="list-icons">
-            <img src="assents/icon-github.png" alt="">
+            <img class="icon-github" src="assents/icon-github.png" alt="">
             <img class="icon-linkedin" src="assents/icon-linkedin.png" alt="">
         </div>
     </div>
