--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">Sobre</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="">Projetos</a></li>
+                <li><a href="#projects">Projetos</a></li>
             </ul>
     
             <div class="list-icons">
@@ -93,6 +93,52 @@
                     <div class="bottom-individual-skill">
                         <h2>Receptivo</h2>
                         <p>Quando trabalhamos com outras pessoas, é de suma importância aceitar ideias novas por parte dos seus companheiros de equipe e clientes.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <hr class="hr">
+
+    <div class="section-4" id="projects">
+        <div class="body-section-4">
+            <h1>Projetos</h1>
+            <p>Projetos são essenciais para o desenvolvimento das habilidades de um desenvolvedor. Fique à vontade para acessar minha página no GitHub e explorar meus projetos.</p>
+            <div class="body-cards">
+                <div class="card">
+                    <img src="assents/img-em-breve.jpg" alt="">
+                    <div class="card-body">
+                        <h1 class="title">Em breve</h1>
+                        <p class="subtitle">Em breve</p>
+                        <div class="body-buttons">
+                            <button class="card-button">Deploy <img id="eye_img" src="assents/icon-eye.png" alt=""></button>
+                        <button class="card-button">GitHub <img id="github_img" src="assents/icon-github.png" alt=""></button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="assents/img-em-breve.jpg" alt="">
+                    <div class="card-body">
+                        <h1 class="title">Em breve</h1>
+                        <p class="subtitle">Em breve</p>
+                        <div class="body-buttons">
+                            <button class="card-button">Deploy <img id="eye_img" src="assents/icon-eye.png" alt=""></button>
+                        <button class="card-button">GitHub <img id="github_img" src="assents/icon-github.png" alt=""></button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="assents/img-em-breve.jpg" alt="">
+                    <div class="card-body">
+                        <h1 class="title">Em breve</h1>
+                        <p class="subtitle">Em breve</p>
+                        <div class="body-buttons">
+                            <button class="card-button">Deploy <img id="eye_img" src="assents/icon-eye.png" alt=""></button>
+                        <button class="card-button">GitHub <img id="github_img" src="assents/icon-github.png" alt=""></button>
+                        </div>
                     </div>
                 </div>
             </div>
