--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
     
         <div class="circle">
-    
+            <img src="assents/img-matheus.jpg" alt="">
         </div>
     </div>
 
@@ -112,8 +112,8 @@
                         <h1 class="title">Em breve</h1>
                         <p class="subtitle">Em breve</p>
                         <div class="body-buttons">
-                            <button class="card-button">Deploy <img id="eye_img" src="assents/icon-eye.png" alt=""></button>
-                        <button class="card-button">GitHub <img id="github_img" src="assents/icon-github.png" alt=""></button>
+                            <button class="card-button-eye">Deploy <img id="eye_img" src="assents/icon-eye.png" alt=""></button>
+                        <button class="card-button-github">GitHub <img id="github_img" src="assents/icon-github.png" alt=""></button>
                         </div>
                     </div>
                 </div>
@@ -124,8 +124,8 @@
                         <h1 class="title">Em breve</h1>
                         <p class="subtitle">Em breve</p>
                         <div class="body-buttons">
-                            <button class="card-button">Deploy <img id="eye_img" src="assents/icon-eye.png" alt=""></button>
-                        <button class="card-button">GitHub <img id="github_img" src="assents/icon-github.png" alt=""></button>
+                            <button class="card-button-eye">Deploy <img id="eye_img" src="assents/icon-eye.png" alt=""></button>
+                        <button class="card-button-github">GitHub <img id="github_img" src="assents/icon-github.png" alt=""></button>
                         </div>
                     </div>
                 </div>
@@ -136,8 +136,8 @@
                         <h1 class="title">Em breve</h1>
                         <p class="subtitle">Em breve</p>
                         <div class="body-buttons">
-                            <button class="card-button">Deploy <img id="eye_img" src="assents/icon-eye.png" alt=""></button>
-                        <button class="card-button">GitHub <img id="github_img" src="assents/icon-github.png" alt=""></button>
+                            <button class="card-button-eye">Deploy <img id="eye_img" src="assents/icon-eye.png" alt=""></button>
+                        <button class="card-button-github">GitHub <img id="github_img" src="assents/icon-github.png" alt=""></button>
                         </div>
                     </div>
                 </div>
